# reasoning_primitives

./: .gitignore  README.md  pyproject.toml
data/: astro_diff4_8_16_n100.json  dyck_m4_8_16_n16_32_64_s100.json  olmo3_pilot.json  olmo_original_diff4_8_16_32_64_n100.json
manuscript/: 00README.json  arxiv.sty  manuscript.aux  manuscript.bbl  manuscript.blg  manuscript.out  manuscript.tex  narrative.md  references.bib
src/: eval.py  generator.py  inference.py  inference.sh  paper_plots.py  task_token_counter.py  templates.py  utils.py
src/assets/: exoplanets.csv
src/tests/: test_parsers.py
